--- a/wercker.yml
+++ b/wercker.yml
@@ -22,11 +22,22 @@ build:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
     - script:
-      name: echo
+      name: composer
       code: |
-        echo "hello world!"
+        cd docker
+        docker-compose up -d allinone
+        docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
+
     - script:
       name: ls
       code: |
         pwd
-        ls -al
+        ls -al ./vendor
+
+    - script:
+      name: test
+      code: |
+        cd docker
+        docker-compose up -d allinone
+        docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit'
+        docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && ./vendor/bin/phpcs --report-width=120 --standard=PSR1 tests/Unit'
