--- a/wercker.yml
+++ b/wercker.yml
@@ -22,22 +22,30 @@ build:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
     - script:
-      name: composer
-      code: |
-        cd docker
-        docker-compose up -d allinone
-        docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
+        name: install-docker-compose
+        code: |
+          sudo rm /usr/local/bin/docker-compose
+          curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+          chmod +x docker-compose
+          sudo mv docker-compose /usr/local/bin
 
     - script:
-      name: ls
-      code: |
-        pwd
-        ls -al ./vendor
+        name: composer
+        code: |
+          cd docker
+          docker-compose up -d allinone
+          docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
 
     - script:
-      name: test
-      code: |
-        cd docker
-        docker-compose up -d allinone
-        docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit'
-        docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && ./vendor/bin/phpcs --report-width=120 --standard=PSR1 tests/Unit'
+        name: ls
+        code: |
+          pwd
+          ls -al ./vendor
+
+    - script:
+        name: test
+        code: |
+          cd docker
+          docker-compose up -d allinone
+          docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit'
+          docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && ./vendor/bin/phpcs --report-width=120 --standard=PSR1 tests/Unit'
