--- a/wercker.yml
+++ b/wercker.yml
@@ -28,11 +28,14 @@ build:
           export DOCKER_COMPOSE_VERSION=1.10.1
           curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
           chmod +x docker-compose
-          sudo mv docker-compose /usr/local/bin
+          #sudo mv docker-compose /usr/local/bin
+          sudo mv docker-compose ./docker/
 
           cd docker
-          docker-compose up -d allinone
-          docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
+          #docker-compose up -d allinone
+          #docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
+          ./docker-compose up -d allinone
+          ./docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
 
     - script:
         name: ls
