--- a/wercker.yml
+++ b/wercker.yml
@@ -30,11 +30,9 @@ build:
           chmod +x docker-compose
           sudo mv docker-compose /usr/local/bin/docker-compose
           cd docker
-          echo "PATH:"
-          echo $PATH
-          cat /pipeline/script*/run.sh
-          docker-compose up -d allinone
-          docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
+          ls -alh /usr/local/bin/docker-compose
+          /usr/local/bin/docker-compose up -d allinone
+          /usr/local/bin/docker-compose run allinone /bin/bash -c 'cd /var/www/html/ci_travis && composer install --dev'
 
     - script:
         name: ls
