--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,8 @@
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
 box:
-  docker: skanno22/ci_sample:latest
+  id: skanno22/ci_sample
+  tag: latest
 
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
