--- a/wercker.yml
+++ b/wercker.yml
@@ -33,4 +33,7 @@ services:
   - name: mysql
     id: mysql
     tag: 5.6.39
-    cmd: export MYSQL_ALLOW_EMPTY_PASSWORD=1
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+    ports:
+      - "13306:3306"
