--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,7 @@
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
 box:
-  id: skanno22/ci_wercker
+  id: skanno22/ci_sample
   tag: latest
 
 # You can also use services such as databases. Read more on our dev center:
