--- a/wercker.yml
+++ b/wercker.yml
@@ -6,6 +6,17 @@ box:
   id: skanno22/ci_sample
   tag: latest
 
+dev:
+  steps:
+    - install-packages:
+        packages: git
+    - script:
+        name: install composer
+        code: curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
+    - script:
+        name: install dependencies
+        code: composer install --no-interaction
+
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
 # services:
@@ -23,48 +34,19 @@ build:
     # Read more about steps on our dev center:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
+    - install-packages:
+        packages: git
     - script:
-        name: composer-install-and-test
-        code: |
-          cd /var/www/html/ci_wercker && composer install --dev
-          cd /var/www/html/ci_wercker && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit
-
-test1:
-  steps:
+        name: install phpunit
+        code: |-
+          curl -L https://phar.phpunit.de/phpunit.phar -o /usr/local/bin/phpunit
+          chmod +x /usr/local/bin/phpunit
     - script:
-        name: composer-install-and-test1
-        code: |
-          cd /var/www/html/ci_wercker && composer install --dev
-          cd /var/www/html/ci_wercker && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit
-
-test2:
-  steps:
+        name: install composer
+        code: curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
     - script:
-        name: composer-install-and-test2
-        code: |
-          cd /var/www/html/ci_wercker && composer install --dev
-          cd /var/www/html/ci_wercker && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit
-
-test3:
-  steps:
+        name: install dependencies
+        code: composer install --no-interaction
     - script:
-        name: composer-install-and-test3
-        code: |
-          cd /var/www/html/ci_wercker && composer install --dev
-          cd /var/www/html/ci_wercker && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit
-
-test4:
-  steps:
-    - script:
-        name: composer-install-and-test4
-        code: |
-          cd /var/www/html/ci_wercker && composer install --dev
-          cd /var/www/html/ci_wercker && ls -al ./vendor/bin && ./vendor/bin/phpunit tests/Unit
-
-echo1:
-  steps:
-    - script:
-        name: echo1
-        code: |
-          echo 12345678
-          env
+        name: PHPUnit integration tests
+        code: phpunit tests/Unit
