--- a/wercker.yml
+++ b/wercker.yml
@@ -3,8 +3,9 @@
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
 box:
-  id: skanno22/ci_sample
-  tag: latest
+  #id: skanno22/ci_sample
+  #tag: latest
+  id: php
 
 dev:
   steps:
@@ -50,3 +51,17 @@ build:
     - script:
         name: PHPUnit integration tests
         code: phpunit tests/Unit
+
+test1:
+  steps:
+    - install-packages:
+        packages: git
+    - script:
+        name: do test
+        code: |-
+          curl -L https://phar.phpunit.de/phpunit.phar -o /usr/local/bin/phpunit
+          chmod +x /usr/local/bin/phpunit
+          curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
+          composer install --no-interaction
+          phpunit tests/Unit
+
